[package]
name = "stm-rtic"
version = "0.1.0"
authors = ["Leah <github.leah@hrmny.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rtic = "0.5.3"
panic-semihosting = "0.5.3"
stm32l4xx-hal = { version = "0.5.0", features = ["stm32l4x6", "rt"] }
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.3"
heapless = "0.5.5"

[dependencies.matrix]
version = "*"
path = "../matrix"
