[package]
name = "stm"
version = "0.1.0"
authors = ["Leah <github.leah@hrmny.sh>"]
edition = "2018"

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
#panic-halt = "0.2.0"
stm32l4xx-hal = { version = "0.5.0", features = ["stm32l4x6", "rt"], path = "../pkg/stm32l4xx-hal" }
panic-semihosting = "0.5.3"
embedded-hal = "0.2.3"
#nb = "0.1.2"
#libm = "0.2.1"

[dependencies.matrix]
version = "*"
path = "../matrix"
